# multi-object-tracking-in-python

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  lint.sh  murty_test.py  noxfile.py  ppp.py  ppp_10.py  pyproject.toml  run.py  tutorial-mot.ipynb
.github/workflows/: lint.yaml  test.yaml  tests.yml
configs/: default.yaml
notebooks/: multi_object_tracking.ipynb
src/: measurement_models.py  motion_models.py  run.py
src/common/: __init__.py  gaussian_density.py  hypothesis_reduction.py  normalize_log_weights.py  state.py
src/configs/: __init__.py  ground_truth_config.py  object_config.py  sensor_model_config.py
src/evaluation_runners/: evaluator.py
src/evaluation_runners/nuscenes/: evaluate.py  nuscenes_eval.py  nuscenes_process.py
src/evaluation_runners/nuscenes/data/detections/: download_megvii_and_unzip.sh
src/metrics/: GOSPA.py  __init__.py
src/mot/: __init__.py  measurement_models.py  motion_models.py
src/mot/common/: RMSE.py  __init__.py  estimation.py  gaussian_density.py  hypothesis_reduction.py  normalize_log_weights.py  state.py
src/mot/configs/: __init__.py  ground_truth_config.py  object_config.py  sensor_model_config.py
src/mot/evaluation_runners/: evaluator.py
src/mot/evaluation_runners/nuscenes/: README.md  config.yml  evaluate.py  nuscenes_eval.py  nuscenes_eval_example.sh  nuscenes_process.py
src/mot/measurement_models/: CT_measurement_model.py  CV_measurement_model.py  RangeBearing_model.py  __init__.py  base_measurement_model.py
src/mot/metrics/: GOSPA.py  __init__.py
src/mot/motion_models/: CT_motion_model.py  CV_motion_model.py  __init__.py  base_motion_model.py
src/mot/scenarios/: initial_conditions.py  object_motion_scenarious.py  scenario_configs.py
src/mot/simulator/: __init__.py  measurement_data_generator.py  object_data_generator.py
src/mot/trackers/multiple_object_trackers/PHD/: __init__.py  gm_phd.py
src/mot/trackers/multiple_object_trackers/PMBM/: README.md  pmbm.py  profiler.py  test_profiler.py  timer.py
src/mot/trackers/multiple_object_trackers/PMBM/common/: __init__.py  assigner.py  bernoulli.py  birth_model.py  fast_gibbs.py  gibbs.py  gibbs_sampling.pyx  global_hypothesis.py  multi_bernoulli_mixture.py  poisson_point_process.py  single_target_hypothesis.py  track.py
src/mot/trackers/n_object_trackers/: GNN_tracker.py  __init__.py  base_n_object_tracker.py
src/mot/trackers/single_object_trackers/: __init__.py  base_single_object_tracker.py  gauss_sum_tracker.py  nearest_neighbour_tracker.py  probabilistic_data_association_tracker.py
src/mot/utils/: __init__.py  get_path.py  profiler.py  time_limitter.py  timer.py  vectorized_gaussian_logpdf.py
src/mot/utils/visualizer/: __init__.py  animator.py  plotter.py
src/mot/utils/visualizer/common/: autoscale.py  common.py  plot_primitives.py  plot_series.py
src/scenarios/: initial_conditions.py  object_motion_scenarious.py  scenario_configs.py
src/simulator/: __init__.py  measurement_data_generator.py  object_data_generator.py
src/trackers/: single_object_trackers.py
src/trackers/multiple_object_trackers/PHD/: __init__.py  gm_phd.py
src/trackers/multiple_object_trackers/PMBM/: README.md  pmbm.py
src/trackers/multiple_object_trackers/PMBM/common/: __init__.py  assigner.py  bernoulli.py  birth_model.py  fast_gibbs.py  gibbs.py  global_hypothesis.py  multi_bernoulli_mixture.py  poisson_point_process.py  single_target_hypothesis.py  track.py
src/trackers/multiple_object_trackers/PMBM/docs/: pmbm_algorithm.drawio
src/trackers/n_object_trackers/: GNN_tracker.py  __init__.py
src/trackers/single_object_trackers/: __init__.py  base_single_object_tracker.py  gauss_sum_tracker.py  nearest_neighbour_tracker.py  probabilistic_data_association_tracker.py
src/utils/: __init__.py  get_path.py  plotting.py  profiler.py  vectorized_gaussian_logpdf.py
src/utils/visualizer/: __init__.py  animator.py  plotter.py
src/utils/visualizer/common/: autoscale.py  common.py  plot_primitives.py  plot_series.py
tests/: conftest.py  testing_trackers.py
tests/MOT/: n_mot_test.py
tests/PHD/: phd_test.py
tests/PMBM/: bernoulli_test.py  conftest.py  debug_test.py  evaluator.py  gibbs.m  nuscenes_test.py  pmbm_test.py  poisson_test.py
tests/PMBM/params/: birth_model.py  initial_PPP_intensity.py  object_motion_scenarious.py
tests/SOT/: sot_test.py
tests/common/: ellipsoidal_gating_test.py  ground_truth_config_test.py  hypotheses_reduction_test.py  moment_matching_test.py  normalized_log_weights_test.py  object_config_test.py  predict_likelihood_test.py  sensor_model_config_test.py  state_test.py
tests/configuration/: ground_truth_config_test.py  object_config_test.py  sensor_model_config_test.py
tests/motion_modeling/: measurement_data_generator_test.py  measurements_model_test.py  motion_models_test.py  object_data_generator_test.py
tests/utils/: plotter_test.py
