[tool.poetry]
name = "mot"
version = "0.1.0"
description = "Multi object tracking course in python"
authors = ["Ivan Kharitonov <ipkharitonov@gmail.com>"]
license = "Apache 2"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.0"
scipy = "^1.6.0"
jupyter = "^1.0.0"
matplotlib = "^3.3.4"
ipython = "^7.19.0"
ipdb = "^0.13.4"
debug = "^0.3.2"
tqdm = "^4.56.2"
colorcet = {git = "https://github.com/holoviz/colorcet.git"}
holoviews = "^1.14.1"
pdbpp = "^0.10.2"
murty = {git = "https://github.com/neer201/murty.git"}
seaborn = "^0.11.1"
jupyter-contrib-nbextensions = "^0.5.1"
motmetrics = "^1.2.0"
nuscenes-devkit = "^1.1.3"
joblib = "^1.0.1"
pathos = "^0.2.7"
pycycle = "^0.0.8"
black = "^21.4b2"
nox = "^2020.12.31"
pre-commit = "^2.12.1"
ujson = "^4.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.11.1"
flake8-import-order = "^0.18.1"
mypy = "^0.800"
ipdb = "^0.13.4"
coverage = "^5.4"
pytest-cov = "^2.11.1"
yapf = "^0.30.0"
autoflake = "^1.4"
rope = "^0.18.0"
gprof2dot = "^2021.2.21"
snakeviz = "^2.1.0"
functiontrace = "^0.3.4"
viztracer = "^0.12.3"
vulture = "^2.3"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["mot"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s "
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
# docstring check

[tool.black] 
# https://black.readthedocs.io/en/stable/pyproject_toml.html#configuration-format
# https://black.readthedocs.io/en/stable/compatible_configs.html
line-length = 120
multi_line_output = 2
include_trailing_comma = true
use_parentheses = false
force_grid_wrap = 0
target-version = ['py37']