[project]
name = "mot"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan Kharitonov", email = "ipkharitonov@gmail.com"},
]
dependencies = [
    "black>=23.7.0",
    "matplotlib>=3.7.2",
    "numpy>=1.25.1",
    "scipy>=1.9.3",
    "imageio>=2.31.1",
    "pdbpp>=0.10.3",
    "pytest>=7.4.0",
    "ipython>=8.14.0",
    "typing>=3.7.4.3",
    "colorcet>=3.0.1",
    "tqdm>=4.65.0",
    "motmetrics>=1.4.0",
    "murty @ git+https://github.com/neer201/murty.git",
    "pytest-profiling>=1.7.0",
    "ruff>=0.0.278",
    "pytype>=2023.7.12",
    "isort>=5.12.0",
    "vulture>=2.7",
    "nox>=2023.4.22",
    "pre-commit>=3.3.3",
]
requires-python = ">= 3.9, < 3.11"
readme = "README.md"
license = {text = "Apache 2.0"}

[tool.pytest.ini_options]
# pytest_plugins = ['pytest_profiling']
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s "
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
# docstring check

[tool.isort]
profile = "black"
multi_line_output = 3
lines_after_imports = 2

[tool.ruff]
select = ["E", "F", "ERA", "T"]
show-fixes = true
fixable = ["F401"]
line-length = 180

[tool.black]
line-length = 180